--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -550,6 +550,20 @@
    "source": [
     "pd.DataFrame(list(model_list, r2_list), columns=['Model', 'R2 Score']).sort_values(by=['R2_Score'], ascending=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa8430a6",
+   "metadata": {},
+   "source": [
+    "### Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ffed3d8",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
